edition = "2023";  // successor to proto2 and proto3

package sensor;

import "storage/service_identity.proto";
import "google/protobuf/go_features.proto";

option go_package = "./internalapi/sensor;sensor";
option features.(pb.go).api_level = API_OPAQUE;

message FetchCertificateRequest {
  storage.ServiceType service_type = 1;
  string service_account_token = 2;
}

message FetchCertificateResponse {
  string pem_cert = 1;
  string pem_key = 2;
}

service CertDistributionService {
  rpc FetchCertificate(FetchCertificateRequest) returns (FetchCertificateResponse);
}
